--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
 <ul class =" navigation ">
     <li><a href ="Index.html">Home</a></li>
     <li><a href ="troubleshooting.html">troubleshooting</a></li>
-    <li><a href ="Start.html">Play now</a></li>
+    <li><a href ="Intro.html">Play now</a></li>
 </ul>
 <div class =" introduction ">
     <p>Hello, welcome to  my game "A lost soul". A lost soul is a game about a boy that wakes up in the middle of
