--- a/Angry Farmer.html
+++ b/Angry Farmer.html
@@ -23,7 +23,7 @@
     </div>
     <footer>
         <div class="Exit">
-            <a href="Index.html">
+            <a href="index.html">
                 <button style=" background-color:grey;height:25px;width:40px;margin-top: 220px;">Exit</button>
             </a>
         </div>
