--- a/Intro.html
+++ b/Intro.html
@@ -8,7 +8,7 @@
 <body >
   <h1>A LOST SOUL</h1>
   <ul class =" navigation ">
-    <li><a href ="Index.html">Home</a></li>
+    <li><a href ="index.html">Home</a></li>
     <li><a href ="troubleshooting.html">troubleshooting</a></li>
     <li><a href ="Start.html">Play now</a></li>
   </ul>
