--- a/lost.html
+++ b/lost.html
@@ -11,7 +11,7 @@
         <img src="images web tech\cave.png">
     </div>
     <div class="button">
-        <a href="Dragon.html">
+        <a href="dragon.html">
             <button>Rest in cave</button>
         </a>
         <a href="backcastle.html">
