--- a/ending2.html
+++ b/ending2.html
@@ -1,41 +1,24 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <link rel="stylesheet" href="css web tech\slidesStyle.css">    
 </head> 
 
 <body>
-    <header>A lost soul</header>
-    <h1 >The cave was the home of a dragon and you disturbed him</h1>
-    <h1>You got burned to death</h1>
+    <header>ENDING 2</header>
+    <h1 >You killed the king and get the power by force </h1>
     <div class="box">
-        <img src="images web tech\dragon.png">
+        <img src="images web tech/broken_heart.png">
     </div>
-<<<<<<< HEAD
-    <div class="buttons">
-        <a href="ending1.html">
-            <button>Continue</button>
-=======
     <div class="button">
-        <a href="Index.html">
+        <a href="Start.html">
             <button>Restart Game</button>
->>>>>>> c05d225 (.)
-        </a>
-        
+        </a>   
     </div>
-    <footer>
-        <div class="Exit">
-            <a href="Index.html">
-                <button style=" background-color:grey;height:25px;width:40px;margin-top: 220px;">Exit</button>
-            </a>
-
-        </div>
-        <div class="Restart">
-            <a href="Start.html">
-                <button style=" background-color:grey;height:25px;width:50px;;">restart</button>
-            </a>
-        </div>    
-    </footer>
+    <audio controls>
+        <source src="sounds web tech/sadness.mp3" type="audio/mpeg">
+      </audio>
 </body>
    
 </html>
