--- a/Angry Farmer.html
+++ b/Angry Farmer.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="css web tech\slidesStyle.css">    
+    <link rel="stylesheet" href="css web tech\slidesStyle.css">
+    <link rel="icon" href="images web tech/bonfire.png">
 </head> 
 
 <body>
