--- a/Intro.html
+++ b/Intro.html
@@ -3,7 +3,8 @@
 <head>
     <title>A LOST SOUL</title>  
     <link rel="stylesheet" href="css web tech\troubleStyle.css">
-    <script src="js web tech/input.js"></script>   
+    <script src="js web tech/input.js"></script> 
+    <link rel="icon" href="images web tech/bonfire.png">
 </head> 
 <body >
   <h1>A LOST SOUL</h1>
