--- a/ending1.html
+++ b/ending1.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="css web tech\slidesStyle.css">
+    <link rel="icon" href="images web tech/bonfire.png">
 </head> 
 <body >
   <header>ENDING 1</header>
