--- a/ending3.html
+++ b/ending3.html
@@ -4,6 +4,7 @@
     <title>ENDING 3</title>
 
     <link rel="stylesheet" href="css web tech\slidesStyle.css"> 
+    <link rel="icon" href="images web tech/bonfire.png">
 </head> 
 
 <body >
