--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="css web tech\MainStyle.css">
+    <link rel="icon" href="images web tech/bonfire.png">
 </head>
 <body>
 <h1>A LOST SOUL</h1>
