--- a/troubleshooting.html
+++ b/troubleshooting.html
@@ -4,6 +4,7 @@
     <title>Troubleshooting</title>  
     <link rel="stylesheet" href="css web tech\troubleStyle.css">
     <script src="js web tech/input.js"></script>   
+    <link rel="icon" href="images web tech/bonfire.png">
 </head> 
 <body >
   <h1>Troubleshooting</h1>
