--- a/sewer.html
+++ b/sewer.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="css web tech\slidesStyle.css">    
+    <link rel="stylesheet" href="css web tech\slidesStyle.css">
     <link rel="icon" href="images web tech/bonfire.png">
+    <script src="js web tech/input.js"></script>
 </head> 
 
 <body>
     <header>A lost soul</header>
-    <h1 >You walked for a bit but you  felt into a hole in the sewer</h1>
-    <h1>You drowned...</h1>
+    <h1>Farmer:Wow you must have hitted your head real hard, are you ok?</h1>
     <div class="box">
-        <img src="images web tech\wave.png">
+        <img src="images web tech\tree.png">
     </div>
     <div class="buttons">
-        <a href="ending1.html">
-            <button>Continue</button>
+        <a href="lost.html">
+            <button>Avoid to talk</button>
         </a>
+        <a href="Angry Farmer.html">
+            <button>Demand explanations</button>
+        </a>
+        <a href="nice-farmer.html">
+            <button>Talk</button>
+        </a>  
     </div>
     <footer>
         <div class="Exit">
-            <a href="index.html">
+            <a href="Index.html">
                 <button style=" background-color:grey;height:25px;width:40px;margin-top: 220px;">Exit</button>
             </a>
         </div>
@@ -28,6 +34,9 @@
                 <button style=" background-color:grey;height:25px;width:50px;;">restart</button>
             </a>
         </div> 
+        <div class+="goback">
+            <button onclick="goBack()" style="background-color:grey;height:35px;width: 45px;">Go Back</button>
+            </div>
     </footer>
 </body>
    
