--- a/Start.html
+++ b/Start.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="css web tech\slidesStyle.css">    
+    <link rel="stylesheet" href="css web tech\slidesStyle.css">
     <link rel="icon" href="images web tech/bonfire.png">
+    <script src="js web tech/input.js"></script>
 </head> 
 
 <body>
@@ -24,7 +25,7 @@
     </div>
     <footer>
         <div class="Exit">
-            <a href="index.html">
+            <a href="Index.html">
                 <button style=" background-color:grey;height:25px;width:40px;margin-top: 220px;">Exit</button>
             </a>
         </div>
@@ -33,6 +34,9 @@
                 <button style=" background-color:grey;height:25px;width:50px;;">restart</button>
             </a>
         </div> 
+        <div class+="goback">
+            <button onclick="goBack()" style="background-color:grey;height:35px;width: 45px;">Go Back</button>
+            </div>
     </footer>
 </body>
    
