--- a/lost.html
+++ b/lost.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" href="css web tech\slidesStyle.css">
     <link rel="icon" href="images web tech/bonfire.png">
+    <script src="js web tech/input.js"></script>
 </head> 
 <body >
   <header>A LOST SOUL</header>
@@ -12,7 +13,7 @@
         <img src="images web tech\cave.png">
     </div>
     <div class="button">
-        <a href="dragon.html">
+        <a href="Dragon.html">
             <button>Rest in cave</button>
         </a>
         <a href="backcastle.html">
@@ -21,7 +22,7 @@
     </div>
     <footer>
         <div class="Exit">
-            <a href="index.html">
+            <a href="Index.html">
                 <button style=" background-color:grey;height:25px;width:40px;margin-top: 220px;">Exit</button>
             </a>
         </div>
@@ -30,6 +31,9 @@
                 <button style=" background-color:grey;height:25px;width:50px;;">restart</button>
             </a>
         </div> 
+        <div class+="goback">
+            <button onclick="goBack()" style="background-color:grey;height:35px;width: 45px;">Go Back</button>
+            </div>
     </footer>
 </body>
    
