--- a/reign.html
+++ b/reign.html
@@ -23,7 +23,7 @@
         </a>
 <footer>
     <div class="Exit">
-        <a href="Index.html">
+        <a href="idex.html">
             <button style=" background-color:grey;height:25px;width:40px;margin-top: 220px;">Exit</button>
         </a>
     </div>
