--- a/ending3.html
+++ b/ending3.html
@@ -15,7 +15,7 @@
         <img src="images web tech\crown.png">
     </div>
     <div class="button">
-        <a href="index.html">
+        <a href="Start.html">
             <button>Restart Game</button>
         </a>
     </div>
