--- a/Wounded.html
+++ b/Wounded.html
@@ -10,7 +10,7 @@
     <header>A lost soul</header>
     <h1  >You won the fight but you got seriously wounded and you cant move...</h1>
     <div class="box">
-        <img src="images web tech\bandage-98.png">
+        <img src="images web tech\Bandage-98.png">
     </div>
     <div class="buttons">
         <a href="ending1.html">
