--- a/troubleshooting.html
+++ b/troubleshooting.html
@@ -11,7 +11,7 @@
   <ul class =" navigation ">
     <li><a href ="index.html">Home</a></li>
     <li><a href ="troubleshooting.html">troubleshooting</a></li>
-    <li><a href ="Start.html">Play now</a></li>
+    <li><a href ="Intro.html">Play now</a></li>
   </ul>
   <h1>Please if you did find any issue with the game please write it down below</h1>
  <div class="text box">
